# language-quiz-service

./: .dockerignore  .gitignore  .pylintrc  CLIENT_MIGRATION_GUIDE.md  Dockerfile  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  commit_msg.txt  demo.yml  docker-compose.yml  env.example  fly.production.toml  fly.staging.toml  pyproject.toml
.cursor/rules/: do-not-mock.mdc  python-rules.mdc
.github/workflows/: auto-sync-staging.yml  deploy-dashboards.yml  deploy-kafka.yml  deploy.yml  production.yml  pylint.yml  pytest.yml  python-app.yml  staging.yml
config/: otel-collector.yaml  prometheus.yml
config/grafana/: datasources.yml
data/: auxilliary-verbs.txt  essential-irregular-verbs.txt  verbs.txt
database/: 0-CreateDatabase.sql  1-CreateDatabases.sql  1-CreateTables.sql  README.md
docs/: architecture.md  async-problem-generation-phase1.md  building.md  compositional-integration-summary.md  compositional-prompt-design.md  development.md  fresh-start-migration-plan.md  generation-requests-tracking.md  grafana-sdk-migration-analysis.md  grafana-sdk-migration-guide.md  kafka-deployment-guide.md  llm-observability.md  migration-complete.md  observability_setup.md  openapi.json  operations-playbook.md  sentence_verb_stack_diagram.md  test_organization_summary.md  testcontainers_migration.md  testing_strategy.md  testing_strategy_doc.md
docs/observability/: dashboard-specification.md  llm-observability.md  observability-setup.md  testing-observability.md
githooks/: pre-commit  pre-push
infra/: README.md  lqs-task.json
infra/kafka/: Dockerfile  README.md  fly.staging.toml
infra/redis/: README.md  verify-redis-security.sh
scripts/: bootstrap_master_api_key.py  docker-entrypoint.sh  down.sh  extract_openapi.py  generate_compose_env.sh  install-githooks.sh  load-schemas.sh  setup-local-env.sh  test-kafka-traffic.sh  up.sh
sql/: 1-Verbs.sql  2-Sentences.sql  3-Problems.sql  4-ApiKeys.sql
sql/legacy/: README.md
sql/test/: 1-LoadTestKeys.sql  2-LoadTestVerbs.sql
src/: __init__.py  main.py
src/api/: api_keys.py  cache_stats.py  generation_requests.py  health.py  problems.py  sentences.py  verbs.py
src/cache/: __init__.py  api_key_cache.py  conjugation_cache.py  verb_cache.py
src/cli/: __main__.py  console.py
src/clients/: __init__.py  abstract_llm_client.py  gemini_client.py  llm_client_factory.py  openai_client.py  schema_converter.py  supabase.py
src/core/: auth.py  config.py  database_init.py  dependencies.py  endpoint_access.py  exceptions.py  factories.py
src/dbtest/: .pylintrc  __main__.py  dbtest.py
src/lqconsole/: __main__.py  lqconsole.py
src/observability/: __init__.py  deploy.py
src/prompts/: compositional_prompts.py  response_schemas.py  sentence_prompts.py  verb_prompts.py
src/repositories/: api_keys_repository.py  generation_requests_repository.py  problem_repository.py  sentence_repository.py  verb_repository.py
src/schemas/: __init__.py  api_keys.py  generation_requests.py  llm_response.py  problems.py  sentence.py  sentences.py  verb.py  verbs.py
src/services/: api_key_service.py  generation_request_service.py  problem_service.py  queue_service.py  sentence_service.py  verb_service.py
src/worker/: __init__.py  config.py  consumer.py  metrics.py  tracing.py
supabase/: config.toml  seed-conjugations.sql  seed.sql
supabase/migrations/: 20251019141016_sync_existing_production_db.sql  20251023084201_initial_verb_list.sql  20251024155420_initial_verb_conjugations.sql  20251110131244_add_problems_last_served_at.sql  20251111000000_add_problems_request_id.sql  20251117135651_add_generation_id.sql  20251226161343_store_prompts_and_reasoning.sql  20251228121050_add_is_test_column_to_verbs.sql  20251229141632_add_expired_status_to_constraint.sql  20251229143752_remove_verbs_for_object_problems_view.sql  20251229144357_set_rls_for_generation_requests.sql  20260107095450_add_plus_que_parfait.sql  20260109111947_random_weighted_problems.sql  20260109121059_add_focus_metadata_index.sql  20260112102002_metadata_filtering.sql
tests/: TESTING.md  conftest.py  test_api_keys.py  test_auth_middleware.py  test_auth_middleware_simple.py  test_database_init.py  test_main.py  test_security.py  test_sentence_prompts.py  test_sentence_repository_extended.py  test_sentences_schemas.py  test_sentences_service.py  test_verb_prompts.py  test_verbs_prompts.py  test_verbs_repository.py  test_verbs_repository_extended.py  test_verbs_schemas.py  test_verbs_service.py  test_verbs_service_extended.py
tests/acceptance/: __init__.py  conftest.py  test_auth.py  test_kafka_infrastructure.py  test_smoke.py
tests/api/: conftest.py  test_generation_requests_api.py
tests/api_keys/: test_api_keys_api.py  test_api_keys_repository.py  test_api_keys_schemas.py  test_api_keys_service.py
tests/cache/: test_api_key_cache.py  test_cache_integration.py  test_conjugation_cache.py  test_verb_cache.py
tests/cli/: test_api_keys_commands.py  test_cache_commands.py  test_database_seed.py  test_generation_requests_commands.py  test_generation_requests_get.py  test_problems.py  test_problems_delete.py  test_problems_get.py  test_problems_purge.py  test_problems_wipe.py  test_safety.py  test_sentences.py  test_sentences_purge.py
tests/clients/: __init__.py  test_gemini_client.py  test_llm_client_factory.py  test_openai_client.py  test_openai_error_categorization.py  test_schema_converter.py
tests/core/: test_config.py  test_cors_config.py
tests/database/: test_database_init.py
tests/middleware/: test_auth_middleware.py  test_endpoint_access.py
tests/problems/: db_helpers.py  fixtures.py  test_problem_repository.py  test_problem_service.py  test_problems_api.py  test_problems_api_async_errors.py  test_problems_api_models.py  test_problems_api_topic_tags.py  test_problems_repository.py  test_problems_repository_lru.py  test_problems_schemas.py  test_problems_service.py  test_problems_service_tag_merging.py  test_problems_topic_tags_queries.py
tests/prompts/: test_tense_hints.py  test_verb_prompts.py
tests/repositories/: test_api_keys_repository.py  (+1 more)
(+164 files in other folders)
